config/k8s/hello/00_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
