config/k8s/hello/01_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
      app.kubernetes.io/part-of: hello
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello
        app.kubernetes.io/part-of: hello
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9100'
    spec:
      containers:
      - image: yornesek/hellosvc:latest
        imagePullPolicy: Always
        name: hellosvc
        ports:
        - containerPort: 9100
          name: monitoring
        - containerPort: 8080
          name: web
        resources:
            limits:
              cpu: 150m
              memory: 50Mi
---
kind: Service
apiVersion: v1
metadata:
  name: hello-svc
  namespace: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
