config/k8s/hello/02_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: https
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts: 
    - echo.dyslav.it
    secretName: echo-tls
  rules:
  - host: echo.dyslav.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 8080
